# ML-Library

./: .buildinfo  .pre-commit-config.yaml  CICD.md  README.md  coverage_report.txt  final_fixed_results.txt  fix_imports.py  fix_test_imports.py  full_test_results.txt  genindex.html  index.html  integration_test_results.txt  new_test_results.txt  objects.inv  passing_tests.txt  preprocessing_test_results.txt  prompt.md  py-modindex.html  pyproject.toml  pytest_results.txt  search.html  searchindex.js  setup.py  simple_svm_test.py  sonar-project.properties  test_imports.py  updated_test_results.txt
.doctrees/: index.doctree
_modules/: index.html
api/: config.html  evaluation.html  index.html  (+4 more)
ml_library/: .gitignore  README.md  diagnostic_tests.py  pyproject.toml  run_tests.sh  test_results_2.txt  test_results_3.txt  test_results_4.txt  unit_test_results.txt  updated_coverage_results.txt
ml_library/.github/workflows/: ci.yml  docs.yml
ml_library/config/: loader.py
ml_library/docs/: conf.py
ml_library/docs/api/: models.rst
ml_library/evaluation/: metrics.py
ml_library/examples/: classification_example.py  regression_example.py
ml_library/inference/: predictor.py
ml_library/ml_library/: __init__.py
ml_library/ml_library/evaluation/: __init__.py
ml_library/ml_library/inference/: __init__.py  predictor.py
ml_library/ml_library/models/: base.py  classification.py  knn_models.py  random_forest.py  regression.py
ml_library/ml_library/preprocessing/: __init__.py
ml_library/ml_library/utils/: __init__.py
ml_library/models/: classification.py  regression.py  tree_models.py  xgboost_models.py
ml_library/tests/integration/: test_pipeline.py
ml_library/tests/unit/: test_models.py  test_predictor.py  test_preprocessing.py  test_svm_imports.py  test_tree_models.py
ml_library/tests/unit/temp/: test_imports.py
ml_library/training/: trainer.py
(+66 files in other folders)
